# structural_loads

./: AGENTS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
docs/: glossary.md  structural_loads_glossary.md
notebooks/: demo_enum.ipynb  demo_loadcollection.ipynb  demo_loads.ipynb  demo_tributary.ipynb
src/structural_loads/: __init__.py
src/structural_loads/domain/: __init__.py  actions.py  loadcase.py  loadcollection.py  loads.py  members.py  tributaryarea.py
src/structural_loads/io/: __init__.py
tests/: test_actions.py  test_loadcase.py  test_loadcollection.py  test_loads.py  test_members.py  test_tributaryarea.py
