# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "structural_loads"
version = "0.1.0"
description = "A Python package for structural load modeling"
readme = "README.md"
authors = [
    { name = "Seb Hilgers", email = "sebhi@mailbox.org" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {}
